Revision history for {{$dist->name}}

{{$NEXT}}

1.11044406 2010-11-03 07:03:05 Pacific/Auckland
          Update toolchain.
          Add meta_noindex support from Role::MetaProvides::Provides

1.11034201 2010-07-25 01:41:58 Pacific/Auckland

          History forks here from Dist::Zilla::Plugin::MetaProvides

1.10034117 2010-07-24 17:37:49 Pacific/Auckland

          Dropped xt/author/kwalitee.t to avoid the needless dep.
           ( Kwalitee Test plugin doesn't have this issue )

1.10027802 2010-05-23 01:08:02 Pacific/Auckland
          Replaced most of dist.ini with @KENTNL
            ( Yeilding more accurate t/ depends )
          Removed =inc::Dist style loopback in favour
            of the more reliable and more generic
            =inc::lib

1.10027518 2010-05-20 17:33:10 Pacific/Auckland
          Upgraded tests to Dist::Zilla 2.x. ( should resolve rt #56482 )
            ( Thanks to DAXIM/Lars Dɪᴇᴄᴋᴏᴡ 迪拉斯 for reporting )
          Upgraded dist.ini to Dist::Zilla 2.x

1.10001919 2009-09-12 06:17:57 UTC
          Dropped the version dep on FindBin because it causes
           problems for some. Apparently deping on something that
           may or may not be in core which may or may not be in core
           later is a bad thing.
          Added CompileTests
          Add dist.ini to release for diagnostic reasons.

1.10000417 2009-08-28 04:52:32 UTC
          Moved the tests around.
          More tests.
          All versions now maxing out to encourage upgrading.
          Moved to relative dating scheme
          Tighter DogFeed Loopback in buildsystem.
          Critic'd.
          Documentation Upped on the plugs.

1.0920022 2009-07-19 22:52:48 UTC
          Moved Documentation to a .pm
              file to satisfy Module::Build

1.0920015 2009-07-19 15:31:07 UTC
          Now eating own dog food.
          Scan *.pm|*.pod so that .pod files index properly
          Only scan lib/
          Fixed Bug with META's having ; in them.
